[tool.poetry]
name = "pa4-dashboard"
version = "0.1.0"
description = "L22 Homework - Streamlit Dashboard – Crypto Market Dashboard using CoinGecko API and Streamlit"
authors = ["Daniela Brittp"]
package-mode = false
 
[tool.poetry.dependencies]
python = ">=3.10"
streamlit = ">=1.30"
pandas = ">=2.0"
requests = ">=2.31"
plotly = ">=5.0"
 